tree-sitter-klein/test/corpus/basics.txt
================================================================================
Integer literal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Double literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (double))

================================================================================
String literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
Boolean literals
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
Val binding
================================================================================

x = 42

--------------------------------------------------------------------------------

(source_file
  (val_binding
    name: (identifier)
    value: (integer)))

================================================================================
Function definition
================================================================================

fun double(x) = x * 2

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (identifier))
    body: (binary_expression
      (identifier)
      (integer))))

================================================================================
If then else inline
================================================================================

if x > 0 then x else 0

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (binary_expression
      (identifier)
      (integer))
    then: (identifier)
    else: (integer)))

================================================================================
Lambda with explicit param
================================================================================

|x -> x + 1|

--------------------------------------------------------------------------------

(source_file
  (lambda
    parameters: (lambda_params
      (identifier))
    body: (binary_expression
      (identifier)
      (integer))))

================================================================================
Lambda with implicit param field access
================================================================================

|.price > 100|

--------------------------------------------------------------------------------

(source_file
  (lambda
    body: (binary_expression
      (implicit_param
        field: (identifier))
      (integer))))

================================================================================
Lambda with bare implicit param
================================================================================

|. > 100|

--------------------------------------------------------------------------------

(source_file
  (lambda
    body: (binary_expression
      (implicit_param)
      (integer))))

================================================================================
Record literal
================================================================================

{ name = "Alice", age = 30 }

--------------------------------------------------------------------------------

(source_file
  (record_literal
    (record_fields
      (record_field
        name: (identifier)
        value: (string))
      (record_field
        name: (identifier)
        value: (integer)))))

================================================================================
Record shorthand
================================================================================

{ name, age }

--------------------------------------------------------------------------------

(source_file
  (record_literal
    (record_fields
      (record_field
        name: (identifier))
      (record_field
        name: (identifier)))))

================================================================================
Function call
================================================================================

add(1, 2)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (identifier)
    arguments: (argument_list
      (integer)
      (integer))))

================================================================================
Field access
================================================================================

user.name

--------------------------------------------------------------------------------

(source_file
  (field_access
    target: (identifier)
    field: (identifier)))

================================================================================
Comment
================================================================================

# this is a comment
x = 1

--------------------------------------------------------------------------------

(source_file
  (comment)
  (val_binding
    name: (identifier)
    value: (integer)))
