tree-sitter-klein/test/corpus/blocks.txt
================================================================================
Function with block body
================================================================================

fun add(x, y) =
  result = x + y
  result

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (identifier)
      (identifier))
    body: (block
      (val_binding
        name: (identifier)
        value: (binary_expression
          (identifier)
          (identifier)))
      (identifier))))

================================================================================
If then else with blocks
================================================================================

if x > 0 then
  x
else
  0

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (binary_expression
      (identifier)
      (integer))
    then: (block
      (identifier))
    else: (block
      (integer))))

================================================================================
Else if chain with blocks
================================================================================

if score >= 750 then
  1
else if score >= 650 then
  2
else
  3

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (binary_expression
      (identifier)
      (integer))
    then: (block
      (integer))
    else: (if_expression
      condition: (binary_expression
        (identifier)
        (integer))
      then: (block
        (integer))
      else: (block
        (integer)))))

================================================================================
Multi-statement then block
================================================================================

if x > 0 then
  a = 1
  b = 2
  a + b
else
  0

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (binary_expression
      (identifier)
      (integer))
    then: (block
      (val_binding
        name: (identifier)
        value: (integer))
      (val_binding
        name: (identifier)
        value: (integer))
      (binary_expression
        (identifier)
        (identifier)))
    else: (block
      (integer))))

================================================================================
Val binding with block
================================================================================

result =
  x = 1
  y = 2
  x + y

--------------------------------------------------------------------------------

(source_file
  (val_binding
    name: (identifier)
    value: (block
      (val_binding
        name: (identifier)
        value: (integer))
      (val_binding
        name: (identifier)
        value: (integer))
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Nested blocks
================================================================================

outer =
  inner =
    x = 1
    x
  inner + 1

--------------------------------------------------------------------------------

(source_file
  (val_binding
    name: (identifier)
    value: (block
      (val_binding
        name: (identifier)
        value: (block
          (val_binding
            name: (identifier)
            value: (integer))
          (identifier)))
      (binary_expression
        (identifier)
        (integer)))))
